[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rand]
features = ["small_rng"]

[features]
default = ["random_unit_vector"]

random_unit_vector = []
random_in_hemisphere = []
