[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
winit = { version = "0.29", features = ["rwh_05"]}
softbuffer = "0.3"
threadpool = "1"

[dependencies.rand]
features = ["small_rng"]

[features]
default = ["random_unit_vector"]

random_unit_vector = []
random_in_hemisphere = []
